Changed visibility checking to fix issue with images not loading inside inline elements

--- a/tests/css/tests.css
+++ b/tests/css/tests.css
@@ -42,3 +42,7 @@ img{
 .hidden{
   display: none;
 }
+
+#test-visible-inline img{
+  width: auto;
+}
